update some info 23.4.5

--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Ruiqi Chen"
-  avatar           : "profile.png"
+  avatar           : "crq.png"
   bio              : "Fudan University"
   location         : "Shanghai, China"
   employer         : 
