--- a/_config.yml
+++ b/_config.yml
@@ -86,7 +86,7 @@ author:
   location         : "Shanghai, China"
   employer         : 
   pubmed           :  # "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
-  googlescholar    :  # "http://yourfullgooglescholarurl.com"
+  googlescholar    :  https://scholar.google.com/citations?user=X-VB7JyO7-EC&hl
   email            :
   researchgate     : "https://www.researchgate.net/profile/Ruiqi_Chen12"
   uri              :
