--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "Ruiqi Chen"
+  name             : "Ruiqi (Ricky) Chen"
   avatar           : "crq.png"
   bio              : # "Fudan University"
   location         : "Wuxi, China"
