--- a/_config.yml
+++ b/_config.yml
@@ -82,8 +82,8 @@ analytics:
 author:
   name             : "Ruiqi (Ricky) Chen"
   avatar           : "crq.png"
-  bio              : # "Fudan University"
-  location         : "Wuxi, China"
+  bio              : "Vrije Universiteit Brussel"
+  location         : "Pleinlaan 2, 1050 Brussel, Belgium"
   employer         : 
   pubmed           :  # "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    :  https://scholar.google.com/citations?user=X-VB7JyO7-EC&hl
