--- a/_config.yml
+++ b/_config.yml
@@ -83,12 +83,12 @@ author:
   name             : "Ruiqi (Ricky) Chen"
   avatar           : "crq.png"
   bio              : "Vrije Universiteit Brussel"
-  location         : "Pleinlaan 2, 1050 Brussel, Belgium"
+  location         : "Brussel, Belgium"
   employer         : 
   pubmed           :  # "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    :  https://scholar.google.com/citations?user=X-VB7JyO7-EC&hl
   email            :
-  researchgate     : "https://www.researchgate.net/profile/Ruiqi_Chen12"
+  researchgate     : "https://www.researchgate.net/profile/Ruiqi-Chen-7"
   uri              :
   bitbucket        :
   codepen          :
